fixes
hide horizontal scrollbar and change video position to fixed

--- a/web-frontend/src/style.css
+++ b/web-frontend/src/style.css
@@ -7,6 +7,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+body{
+    overflow-x: hidden;
+}
+
 h1{
     color: #fff;
     padding: 18px 0;
@@ -39,7 +43,7 @@ h6{
     margin-block-start: 0.5rem;
 }
 video {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     object-fit: cover;
